--- a/PracticeDesktopApp/PracticeDesktopApp.csproj
+++ b/PracticeDesktopApp/PracticeDesktopApp.csproj
@@ -170,40 +170,36 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Controllers\UsersDAO.cs" />
     <Compile Include="Logic\HangedMan\HangedMan.cs" />
     <Compile Include="Models\UserInfo.cs" />
-    <Compile Include="Views\Auth\Login.xaml.cs">
-      <DependentUpon>Login.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Views\Auth\Register.xaml.cs">
-      <DependentUpon>Register.xaml</DependentUpon>
-    </Compile>
     <Compile Include="Views\Dialogs\ModalGameOver.xaml.cs">
       <DependentUpon>ModalGameOver.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Views\hangedWindow.xaml.cs">
+    <Compile Include="Views\Windows\Games\hangedWindow.xaml.cs">
       <DependentUpon>hangedWindow.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Views\TrainCardWindow.xaml.cs">
+    <Compile Include="Views\Modals\ModalFirstTime.xaml.cs">
+      <DependentUpon>ModalFirstTime.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Modals\ModalLogin.xaml.cs">
+      <DependentUpon>ModalLogin.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Modals\ModalRegister.xaml.cs">
+      <DependentUpon>ModalRegister.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Windows\Games\TrainCardWindow.xaml.cs">
       <DependentUpon>TrainCardWindow.xaml</DependentUpon>
     </Compile>
-    <Page Include="Views\Auth\Login.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Views\Auth\Register.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
     <Page Include="Views\Dialogs\ModalGameOver.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Views\hangedWindow.xaml">
+    <Page Include="Views\Windows\Games\hangedWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Views\MainWindow.xaml">
+    <Page Include="Views\Windows\Main\MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
@@ -213,11 +209,23 @@
     </Compile>
     <Compile Include="Logic\TrainCards\Card.cs" />
     <Compile Include="Logic\TrainCards\Game.cs" />
-    <Compile Include="Views\MainWindow.xaml.cs">
+    <Compile Include="Views\Windows\Main\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Page Include="Views\TrainCardWindow.xaml">
+    <Page Include="Views\Modals\ModalFirstTime.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\Modals\ModalLogin.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\Modals\ModalRegister.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\Windows\Games\TrainCardWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
